# pyvworld

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  WSL_KRADDR_GEO_DEBUG_UI.md  pyproject.toml  vworld-api.md
debug-ui/: README.md  app.py  pyproject.toml
debug-ui/.streamlit/: config.toml
debug-ui/vworld_debug_ui/: __init__.py  fixture_writer.py  history_store.py  preset_store.py
docs/: api-coverage.md  code-review-2025-05-23.md  data-services.md  debug-ui.md  decisions.md  journal.md  repeated-mistakes.md  resume.md  tasks.md  testing.md
pyvworld/: __init__.py  _http.py  _params.py  client.py  exceptions.py  metadata.py  models.py  pagination.py
src/vworld/: __init__.py  _http.py  _params.py  catalog.py  client.py  debug.py  exceptions.py  metadata.py  parser.py  processor.py
tests/: __init__.py  conftest.py  runners.py  test_async_client.py  test_catalog.py  test_client_images_tiles.py  test_client_ogc.py  test_client_rest.py  test_debug.py  test_debug_ui_fixture_writer.py  test_dependency_boundaries.py  test_generated_fixtures.py  test_http.py  test_live_api.py  test_metadata.py  test_models.py  test_pagination.py  test_params.py  test_parser_processor_debug.py  test_public_types.py  utils.py
tests/fixtures/search/: search_pangyo_place.json
