[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvworld"
version = "0.1.0"
description = "Unofficial Python client for VWorld REST, OGC, and tile APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "digitie" }
]
keywords = ["vworld", "gis", "geocoder", "wms", "wfs", "wmts", "tms", "korea"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "responses>=0.25",
  "ruff>=0.5",
  "types-requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["pyvworld*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
markers = [
  "live: tests that call the real VWorld API and require VWORLD_API_KEY",
]
