[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-vworld-api"
version = "0.1.0"
description = "Unofficial Python client for VWorld REST, OGC, and tile APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "digitie", email = "digitie@gmail.com" }
]
keywords = ["vworld", "gis", "geocoder", "wms", "wfs", "wmts", "tms", "korea"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.12",
]

[project.urls]
Homepage = "https://github.com/digitie/python-vworld-api"
Repository = "https://github.com/digitie/python-vworld-api"
Issues = "https://github.com/digitie/python-vworld-api/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vworld*"]

[tool.setuptools.package-data]
vworld = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["A002"]
"src/vworld/client.py" = ["A002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
pythonpath = ["src"]
markers = [
  "live: tests that call the real VWorld API and require VWORLD_API_KEY",
]
