[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vworld-debug-ui"
version = "0.1.0"
description = "Streamlit debug UI and fixture generator for python-vworld-api."
requires-python = ">=3.10"
dependencies = [
  "python-vworld-api>=0.1.0",
  "streamlit>=1.34",
  "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["vworld_debug_ui*"]
